# crunch

./: .gitignore  CMakeLists.txt
crunch/: CMakeLists.txt  GuillotineBinPack.cpp  MaxRectsBinPack.cpp  Rect.cpp  binary.cpp  binary.hpp  bitmap.cpp  bitmap.hpp  hash.cpp  hash.hpp  lodepng.cpp  main.cpp  packer.cpp  packer.hpp  str.cpp  str.hpp
